--- a/Sprint3/Desafio/desafio1.ipynb
+++ b/Sprint3/Desafio/desafio1.ipynb
@@ -441,6 +441,93 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Média de Avaliações por Categoria:\n",
+      "BUSINESS: 4.10\n",
+      "COMMUNICATION: 4.12\n",
+      "FAMILY: 4.18\n",
+      "GAME: 4.25\n",
+      "MEDICAL: 4.17\n",
+      "Outros: 4.17\n",
+      "PERSONALIZATION: 4.33\n",
+      "PRODUCTIVITY: 4.18\n",
+      "SPORTS: 4.22\n",
+      "TOOLS: 4.04\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "\n",
+    "Formato de lista.\n",
+    "\n",
+    "Faz a média das avaliações de cata categoria\n",
+    "levando em consideração as importantes utilizadas\n",
+    "anteriormente.\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "# Categorias importantes\n",
+    "importantes = [\"FAMILY\", \"GAME\", \"TOOLS\", \"MEDICAL\", \"BUSINESS\", \"PRODUCTIVITY\", \"PERSONALIZATION\", \"COMMUNICATION\", \"SPORTS\"]\n",
+    "\n",
+    "# Adicionar uma nova coluna 'Categoria Classificada' com 'Outros' para categorias não importantes\n",
+    "df['Categoria Classificada'] = df['Category'].apply(lambda x: x if x in importantes else 'Outros')\n",
+    "\n",
+    "# Calcular a média de avaliações por categoria classificada\n",
+    "average_rating_by_classified_category = df.groupby(\"Categoria Classificada\")[\"Rating\"].mean()\n",
+    "\n",
+    "# Exibir o resultado com formatação de 1.2f\n",
+    "print(\"Média de Avaliações por Categoria:\")\n",
+    "for category, avg_rating in average_rating_by_classified_category.items():\n",
+    "    print(f\"{category}: {avg_rating:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aplicativo com o menor número de instalações:\n",
+      "\n",
+      "App: Popsicle Launcher for Android P 9.0 launcher\n",
+      "Installs: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\" \n",
+    "Formato de valor.\n",
+    "\n",
+    "Imprime o App com o menor número de instalações.\n",
+    "\n",
+    "\"\"\"\n",
+    "# Garantir que a coluna 'Installs' está no formato string\n",
+    "df['Installs'] = df['Installs'].astype(str)\n",
+    "\n",
+    "# Converter a coluna 'Installs' para um formato numérico removendo sinais de '+' e ',' e convertendo para inteiro\n",
+    "df['Installs'] = df['Installs'].str.replace(',', '').str.replace('+', '').astype(int)\n",
+    "\n",
+    "# Encontrar o aplicativo com o menor número de instalações\n",
+    "min_installs_app = df.loc[df['Installs'].idxmin()]\n",
+    "\n",
+    "# Exibir o resultado\n",
+    "print(\"Aplicativo com o menor número de instalações:\\n\")\n",
+    "print(f\"App: {min_installs_app['App']}\")\n",
+    "print(f\"Installs: {min_installs_app['Installs']}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
