--- a/Sprint3/Desafio/desafio1.ipynb
+++ b/Sprint3/Desafio/desafio1.ipynb
@@ -468,7 +468,7 @@
     "\n",
     "1. Formato de lista.\n",
     "\n",
-    "Faz a média das avaliações de cata categoria\n",
+    "Faz a média das avaliações de cada categoria\n",
     "levando em consideração as importantes utilizadas\n",
     "anteriormente.\n",
     "\n",
